# E7gearScoreCalculator

./: README.md  output.docx  page1.docx  pyproject.toml
e7_gear_calc/: __init__.py
